better 'why join' section.

--- a/index.html
+++ b/index.html
@@ -117,30 +117,36 @@
 						<div class="row">
 							<div class="4u">
 								<section class="box box-style1">
-									<span class="icon featured-icon icon-info-sign"></span>
-									<h3>Promotion</h3>
-									<p>To promote and educate the industry, Government and the wider community about Bitcoin, it features and advantages.</p>
+									<span class="icon featured-icon icon-group"></span>
+									<h3>Join</h3>
+									<p>Your membership funds our efforts to standardize, protect and promote Bitcoin.</p>
+									<p>We offer, indivdual, small business and corporate membership classes.</p>
 								</section>
 							</div>
 							<div class="4u">
 								<section class="box box-style1">
-									<span class="icon featured-icon icon-bar-chart"></span>
-									<h3>Standardisation</h3>
-									<p>To co-ordinate implementation of best practices protocols for Bitcoin in Australia.</p>
+									<span class="icon featured-icon icon-qrcode"></span>
+									<h3>Donate</h3>
+									<p>Bitcoin Australia accepts donations in Bitcoins. We believe this is important for two reasons:</p>
+									<p>It represents our strong belief in the value of Bitcoin as a medium of exchange AND
+									It automatically makes the Associations’s assets public information—allowing Bitcoin users to see 
+									how much we have received in donations and emphasizing our commitment to transparency
+									</p>
 								</section>
 							</div>
 							<div class="4u">
 								<section class="box box-style1">
-									<span class="icon featured-icon icon-umbrella"></span>
-									<h3>Protection</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+									<span class="icon featured-icon icon-comments"></span>
+									<h3>Contribute</h3>
+									<p>Bitcoin Australia aims to run a high quality wiki, full of useful information about Bitcoin, 
+									with a specific focus on Australian concerns.</p>
+									<p>By joining you are granted editing powers, so you can help other bitcoiners, 
+									inform others about your Bitcoin-accepting business, and help develop the strategies of Bitcoin Australia.</p>
 								</section>
 							</div>
 						</div>
 					</div>
-					<footer>
-						<a href="/wiki/Why_Join" class="button button-big">Read more on the wiki</a>
-					</footer>
+					<footer> <a href="#contact" class="button button-big">Read more on wiki</a></footer>
 				</article>
 			</div>
 			
