--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<article id="whyjoin">
 					<header>
 						<h1>Why Join?</h1>
-						<h2>Australia can be at the forefront of digital currency revolution.</h2>
+						<h2>Help Australia become a global leader in Bitcoin technology</h2>
 						<div class="row">
 							<p>The Bitcoin Association of Australia is dedicated to the promotion, 
 							standardisation and protection of Bitcoin and cryptocurrency in the region.</p>
@@ -351,13 +351,14 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="8u">
+							<div class="6u">
 								<h2>Donate</h2>
 								<p>Bitcoin Australia welcomes donations in Bitcoin. We elect to only accept donations in Bitcoin. This is due to the unique properties of Bitcoin, and our ideological stance.</p>
 							</div>
-							<div class="4u">
+							<div class="6u">
 								<h3>Please send donations to:</h3>
-								<p>1Address</p>
+								<p><a href="https://blockchain.info/address/1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE">1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE</a></p>
+								<a href="bitcoin:1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE"><img src="https://blockchain.info/qr?data=1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE&size=200" alt="QR Code and Bitcoin: link"></a>
 							</div>
 						</div>
 						<div class="row ">
