--- a/index.html
+++ b/index.html
@@ -76,22 +76,25 @@
 							<div class="4u">
 								<section class="box box-style1">
 									<span class="icon featured-icon icon-info-sign"></span>
-									<h3>Promotion</h3>
-									<p>We seek to help bring Australia into the future by promoting Bitcoin and the novel business opportunities it presents.</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section class="box box-style1">
-									<span class="icon featured-icon icon-umbrella"></span>
-									<h3>Protection</h3>
-									<p>Change, however, does not come without risk, so we also aim to protect Bitcoin in the times ahead: resisting harmful legislation and contributing to the beneficial.</p>
+									<h3>Education</h3>
+									<p>We seek to reduce knowledge barriers to entry, thereby growing the Bitcoin ecosystem.</p>
+									<p>For individual and institutional users we provide objective, fair and balanced practical information, consultation and advice.</p>
 								</section>
 							</div>
 							<div class="4u">
 								<section class="box box-style1">
 									<span class="icon featured-icon icon-bar-chart"></span>
 									<h3>Standardisation</h3>
-									<p>Through this process Bitcoin will need to gain utility while never changing the core design philosophy. ............</p>
+									<p>We seek to protect the local ecosystem by bringing a necessary level of conformity. </p>
+									<p>To that end we create content, standards and guidelines of best practice for interacting with the technology. <p><a href="safe.html">Safe Bitcoin Practices</a></p>
+								</section>
+							</div>
+							<div class="4u">
+								<section class="box box-style1">
+									<span class="icon featured-icon icon-umbrella"></span>
+									<h3>Protection</h3>
+									<p>We seek to protect Bitcoin, as the most promising open-source project and p2p network on the planet. </p>
+									<p>Bitcoin is secure when this source of strength is maintained. We achieve this by fostering those creating services on the open architecture.</p>
 								</section>
 							</div>
 						</div>
@@ -146,7 +149,7 @@
 							</div>
 						</div>
 					</div>
-					<footer> <a href="#contact" class="button button-big">Read more on wiki</a></footer>
+					<footer> <a href="/wiki/WhyJoin" class="button button-big">Read more on wiki</a></footer>
 				</article>
 			</div>
 			
