--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ It automatically makes the Associations’s assets public information—allowing
 				</article>
 			</div>
 					
-		<!-- Portfolio -->
+		<!-- FAQ / Links -->
 			<div class="wrapper wrapper-style3">
 				<article id="portfolio">
 					<header>
@@ -241,6 +241,8 @@ The decentralised network of computers that run the Bitcoin software, belong to 
 					</footer>
 				</article>
 			</div>
+			
+			
 		<!-- about -->
 			<div class="wrapper wrapper-style3">
 				<article id="about">
