--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 							</div>
 							<div class="4u">
 								<article class="box box-style2">
-									<a href="https://blockchain.info/" class="image image-full"><img src="images/bitcoin01.jpg" alt="" /></a>
+									<a href="https://blockchain.info/" class="image image-full"><img src="images/Bitcoin01.jpg" alt="" /></a>
 									<h3><a href="http://bitcoin.org/en/" target="new">Bitcoin</a></h3>
 									<p>All Bitcoin transactions are recorded in the "Blockchain" that can be inspected by anyone online, <a href="https://blockchain.info">Blockchain.info</a> </p>
 									<p>A Bitcoin is divisible to 8 decimal places, the units are called 'Satoshis'. The decentralised network of computers that run the Bitcoin software, belong to no bank, government or corporation. These computers perpetuate and audit the Bitcoin network.</p>
