--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<header>
 								<h1>Bitcoin Australia.</h1>
 							</header>
-							<p>We are Australia's first not-for-profit Bitcoin association dedicated to the standardisation, protection, and promotion of Bitcoin and cryptocurrency in the region.</p>
+							<p>We are Australia's not-for-profit Bitcoin association dedicated to the standardisation, protection, and promotion of Bitcoin and cryptocurrency in the region.</p>
 							<a href="#mission" class="button button-alt button-big">Mission</a>
 							<a href="#whyjoin" class="button button-big">Why join?</a>
 							<a href="#join" class="button button-big">Join Us</a>
