--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 							<header>
 								<h1>Bitcoin Australia.</h1>
 							</header>
-							<p>We are Australia's not-for-profit Bitcoin association dedicated to the standardisation, protection, and promotion of Bitcoin and cryptocurrency in the region.</p>
+							<p>We are Australia's not-for-profit association dedicated to the standardisation, protection, and promotion of Bitcoin and cryptocurrency in the region.</p>
 							<a href="#mission" class="button button-alt button-big">Mission</a>
-							<a href="#whyjoin" class="button button-big">Why join?</a>
+							<a href="#whyjoin" class="button button-big">Why Join?</a>
 							<a href="#join" class="button button-big">Join Us</a>
 						</div>
 					</div>
@@ -64,7 +64,7 @@
 				<article id="mission">
 					<header>
 						<h1>Our Mission</h1>
-						<h2>Australia can be at the forefront of digital currency revolution.</h2>
+						<h2>Australia is at the forefront of digital currency revolution.</h2>
 						<div class="row">
 							<p>
 								Bitcoin represents some unique opportunities - both technologically and economically - that have been unavaliable to the world until now.
@@ -186,10 +186,10 @@
 							<div class="12u">
 								<article class="box box-style2 bio">
 									<div class="imgdiv">
-										<img src="images/about06.jpg" alt="Martin Bajalan" /></a>
+										<img src="images/about06.jpg" alt="Martin Bajalan" />
 									</div>
 									<div class="biotext">
-										<h3><a href="">Martin Bajalan <span class="position">| Board member</a></h3>
+										<h3><a href="">Martin Bajalan <span class="position">| Board member</span></a></h3>
 										<p>
 											Martin has background in Computing and Mathematics and has managed development of several enterprise level software products in the area of e-commerce, credit card payment gateways, trading and ERP systems over the past 14 years.   
 											<br>
@@ -205,10 +205,10 @@
 							<div class="12u">
 								<article class="box box-style2 bio">
 									<div class="imgdiv">
-										<img src="images/about07.jpg" alt="Max Kaye" /></a>
+										<img src="images/about07.jpg" alt="Max Kaye" />
 									</div>
 									<div class="biotext">
-										<h3><a href="">Max Kaye <span class="position">| Treasurer</a></h3>
+										<h3><a href="">Max Kaye <span class="position">| Treasurer</span></a></h3>
 										<p>
 											As a cryptocurrency enthusiast, and a member of the Bitcoin community since 2010, Max has a vast array of experience dealing with *coin based technology; from running a NMC/BTC mining pool in 2011, to experimenting with trustless exchange in 2013.
 											<br>
@@ -223,10 +223,10 @@
 							<div class="12u">
 								<article class="box box-style2 bio">
 									<div class="imgdiv">
-										<img src="images/about04.jpg" alt="Adam Poulton" />&nbsp;</a>
+										<img src="images/about04.jpg" alt="Adam Poulton" />
 									</div>
 									<div class="biotext">
-										<h3><a href="">Adam Poulton <span class="position">| Secretary</a></h3>
+										<h3><a href="">Adam Poulton <span class="position">| Secretary</span></a></h3>
 										<p>
 											Adam is a self employed business owner and father of two living in Tasmania.
 											Adam has a Degree in Applied Science from the University of Tasmania and has also had an interest in money and macro economics from an early age.
@@ -243,10 +243,10 @@
 							<div class="12u">
 								<article class="box box-style2 bio">
 									<div class="imgdiv">
-										<img src="images/about08.jpg" alt="Pantelis Roussakis" /></a>
+										<img src="images/about08.jpg" alt="Pantelis Roussakis" />
 									</div>
 									<div class="biotext">
-										<h3><a href="">Pantelis Roussakis <span class="position">| Vice President</a></h3>
+										<h3><a href="">Pantelis Roussakis <span class="position">| Vice President</span></a></h3>
 										<p>
 											Digital Marketing Strategist and Consultant. Keynote speaker, Web 2.0 and Social Media test pig. I live online.
 											My aims are to introduce, train and nurture professional screen creatives and artisans in the leverage of digital currencies like Bitcoin.
@@ -263,10 +263,10 @@
 							<div class="12u">
 								<article class="box box-style2 bio">
 									<div class="imgdiv">
-										<img src="images/about03.jpg" alt="Bret Treasure" /></a>
+										<img src="images/about03.jpg" alt="Bret Treasure" />
 									</div>
 									<div class="biotext">
-										<h3><a href="">Bret Treasure <span class="position">| Board member</a></h3>
+										<h3><a href="">Bret Treasure <span class="position">| Board member</span></a></h3>
 										<p>
 											I'm an online marketing consultant; my business is called Free Beer. I'm also Chairman of the Australian Web Industry Association, the professional body that represents web developers and online marketing practitioners.
 											<br>
@@ -281,7 +281,7 @@
 							<div class="12u">
 								<article class="box box-style2 bio">
 									<div class="imgdiv">
-										<img src="images/about02.jpg" alt="Jason Williams" /></a>
+										<img src="images/about02.jpg" alt="Jason Williams" />
 									</div>
 									<div class="biotext">
 										<h3><a href="">Jason Williams <span class="position">| President</span></a></h3>
@@ -300,10 +300,10 @@
 							<div class="12u">
 								<article class="box box-style2 bio">
 									<div class="imgdiv">
-										<img src="images/about05.jpg" alt="Tristan Winters" /></a>
+										<img src="images/about05.jpg" alt="Tristan Winters" />
 									</div>
 									<div class="biotext">
-										<h3><a href="">Tristan Winters <span class="position">| Board member</a></h3>
+										<h3><a href="">Tristan Winters <span class="position">| Board member</span></a></h3>
 										<p>
 											Graduated law school politically aware but largely apathetic. After discovering ‘The Money Masters’, by William T. Still, he was awakened and energised.
 											He tirelessly consumed the writings of free-market thinkers. His worldview solidified. Only honest money could beget freedom. 
@@ -321,10 +321,10 @@
 							<div class="12u">
 								<article class="box box-style2 bio">
 									<div class="imgdiv">
-										<img src="images/unknown.jpg" alt="You?" /></a>
+										<img src="images/unknown.jpg" alt="You?" />
 									</div>
 									<div class="biotext">
-										<h3><a href="">You? <span class="position">| Board member</a></h3>
+										<h3><a href="">You? <span class="position">| Board member</span></a></h3>
 										<p>
 											Bitcoin Australia's constitution allows for up to 9 board members. We're going to try to hold the AGM earlier rather than later, which will involve an election of a new board. Have you thought of running?
 										</p>
@@ -374,7 +374,7 @@
 							  <article class="box box-style2">
 									<a href="http://bitcoin.clarkmoody.com/" class="image image-full"><img src="images/portfolio03.jpg" alt=""/></a>
 									<h3><a href="http://bitcoincharts.com/" target="new">Finding Bitcoins?</a></h3>
-								<p>Bitcoins can be sent, person to person across the internet, instantaneously, with minimal or no fees. Bitcoins are traded globally, on international and local currency exchanges, and in person. They can be bought and sold for all major currencies. Australian banks will also exchange $AUD for Bitcoins</p> Bitcoin Exchanges</p>
+								<p>Bitcoins can be sent, person to person across the internet, instantaneously, with minimal or no fees. Bitcoins are traded globally, on international and local currency exchanges, and in person. They can be bought and sold for all major currencies. Australian banks will also exchange $AUD for Bitcoins</p><p>Bitcoin Exchanges</p>
 									<a href="https://www.mtgox.com/">MT.GOX</a>
 								  <a href="https://www.bitstamp.net/">BITSTAMP</a>
 								  <a href="https://btc-e.com/">BTC-E</a>
@@ -404,7 +404,7 @@
 									<a href="http://bitcoin.org/en/getting-started" class="image image-full"><img src="images/portfolio06.jpg" alt="" /></a>
                                     
 									<h3><a href="http://bitcoin.org/en/getting-started">Using Bitcoin</a></h3>
-									<p>Wordpress, Website hosting, Online games and online stores like eBay and Shopify all accept Bitcoin as an alternative payement system. <a href="https://www.spendbitcoins.com/places/"> <p>Places that accept bitcoins</a>.</p>
+									<p>Wordpress, Website hosting, Online games and online stores like eBay and Shopify all accept Bitcoin as an alternative payement system. <p><a href="https://www.spendbitcoins.com/places/">Places that accept bitcoins</a>.</p>
 								</article>
 							</div>
 						</div>
