Fixing other half of #1 Removed 'banks will turn $aud into btc' referenced in issue #1. Not sure why that was there.

--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
 							  <article class="box box-style2">
 									<a href="http://bitcoin.clarkmoody.com/" class="image image-full"><img src="images/portfolio03.jpg" alt=""/></a>
 									<h3><a href="http://bitcoincharts.com/" target="new">Finding Bitcoins?</a></h3>
-								<p>Bitcoins can be sent, person to person across the internet, instantaneously, with minimal or no fees. Bitcoins are traded globally, on international and local currency exchanges, and in person. They can be bought and sold for all major currencies. Australian banks will also exchange $AUD for Bitcoins</p><p>Bitcoin Exchanges</p>
+								<p>Bitcoins can be sent, person to person across the internet, instantaneously, with minimal or no fees. Bitcoins are traded globally, on international and local currency exchanges, and in person. They can be bought and sold for all major currencies.</p>
+								<p>Bitcoin Exchanges</p>
 									<a href="https://en.bitcoin.it/wiki/Category:Exchanges">List of Exchanges</a>
                                     
 								</article>
