Fix #3 #4 #5 and change Why Join to Help Us (makes more sense with join/donate/contirbute)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<ul class="container">
 					<li><a href="#top">Home</a></li>
 					<li><a href="#mission">Mission</a></li>
-					<li><a href="#whyjoin">Why Join?</a></li>
+					<li><a href="#helpus">Help Us</a></li>
                     <li><a href="#join">Join Us</a></li>
                     <li><a href="#about">About The Board</a></li>
                     <li><a href="/wiki">Wiki</a></li>
@@ -52,7 +52,7 @@
 							</header>
 							<p>We are Australia's not-for-profit association dedicated to the standardisation, protection, and promotion of Bitcoin and cryptocurrency in the region.</p>
 							<a href="#mission" class="button button-alt button-big">Mission</a>
-							<a href="#whyjoin" class="button button-big">Why Join?</a>
+							<a href="#helpus" class="button button-big">Help Us</a>
 							<a href="#join" class="button button-big">Join Us</a>
 						</div>
 					</div>
@@ -64,7 +64,7 @@
 				<article id="mission">
 					<header>
 						<h1>Our Mission</h1>
-						<h2>Australia is at the forefront of digital currency revolution.</h2>
+						<h2>Australia is at the forefront of the digital currency revolution.</h2>
 						<div class="row">
 							<p>
 								Bitcoin represents some unique opportunities - both technologically and economically - that have been unavaliable to the world until now.
@@ -105,12 +105,12 @@
 				</article>
 			</div>
 			
-		<!-- Why Join -->
+		<!-- Help Us -->
 			<div class="wrapper wrapper-style3">
-				<article id="whyjoin">
+				<article id="helpus">
 					<header>
-						<h1>Why Join?</h1>
-						<h2>Help Australia become a global leader in Bitcoin technology</h2>
+						<h1>How to help us</h1>
+						<h2>Help Australia become a global leader in Bitcoin technology.</h2>
 						<div class="row">
 							<p>The Bitcoin Association of Australia is dedicated to the promotion, 
 							standardisation and protection of Bitcoin and cryptocurrency in the region.</p>
@@ -123,7 +123,8 @@
 									<span class="icon featured-icon icon-group"></span>
 									<h3>Join</h3>
 									<p>Your membership funds our efforts to standardize, protect and promote Bitcoin.</p>
-									<p>We offer, indivdual, small business and corporate membership classes.</p>
+									<p>We offer, indivdual and a variety of industry membership classes.</p>
+									<a href="#join">Join Us.</a>
 								</section>
 							</div>
 							<div class="4u">
@@ -132,9 +133,10 @@
 									<h3>Donate</h3>
 									<p>Bitcoin Australia accepts donations in Bitcoins. We believe this is important for two reasons:</p>
 									<p>It represents our strong belief in the value of Bitcoin as a medium of exchange AND
-									It automatically makes the Associations’s assets public information—allowing Bitcoin users to see 
-									how much we have received in donations and emphasizing our commitment to transparency
+									it automatically makes the Associations’s assets public information—allowing Bitcoin users to see 
+									how much we have received in donations and emphasizing our commitment to transparency.
 									</p>
+									<a href="#contact">Donation details.</a>
 								</section>
 							</div>
 							<div class="4u">
@@ -149,7 +151,7 @@
 							</div>
 						</div>
 					</div>
-					<footer> <a href="/wiki/WhyJoin" class="button button-big">Read more on wiki</a></footer>
+					<footer> <a href="/wiki/HelpUs" class="button button-big">Read more on wiki</a></footer>
 				</article>
 			</div>
 			
@@ -162,6 +164,7 @@
 					</header>
 					<div class="row half">
 						<div class="12u" id="membershipInclude">
+							<h3>Loading...</h3>
 						</div>
 						<script>
 							$(function(){
