Fixed martin's bio - removed etc

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 											Martin has background in Computing and Mathematics and has managed development of several enterprise level software products in the area of e-commerce, credit card payment gateways, trading and ERP systems over the past 14 years.   
 											<br>
 											After hearing about Bitcoin in late 2012, Martin took leave from the research program in order to develop a trading platform for digital currencies which was launched in September 2013. 
-											Martin actively supports industry regulation for Bitcoin and also cooperation with governments in the areas of AML, Fraud prevention, etc.
+											Martin actively supports industry regulation for Bitcoin and also cooperation with governments in the areas of AML, and Fraud prevention.
 										</p>
 									</div>
 								</article>
