Better phrasing for when we'll hold an AGM

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 									<div class="biotext">
 										<h3><a href="">You? <span class="position">| Board member</span></a></h3>
 										<p>
-											Bitcoin Australia's constitution allows for up to 9 board members. We're going to try to hold the AGM earlier rather than later, which will involve an election of a new board. Have you thought of running?
+											Bitcoin Australia's constitution allows for up to 9 board members. We'll be holding an AGM within the first 12 months, which will involve an election of a new board. Have you thought of running?
 										</p>
 									</div>
 								</article>
