better mission phrasing

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<h2>Australia is at the forefront of the digital currency revolution.</h2>
 						<div class="row">
 							<p>
-								Bitcoin represents some unique opportunities - both technologically and economically - that have been unavaliable to the world until now.
+								Bitcoin represents a unique opportunity - both technologically and economically - previously unavailable to the world.
 							</p>
 						</div>
 					</header>
