membership eligability reword

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				<article id="join" class="container small">
 					<header>
 						<h2>Join Us</h2>
-						<span>Membership is open to individuals who are a citizen or resident of Australia, and to legal entities registered in Australia.</span>
+						<span>Membership is open to individuals who are citizens or residents of Australia and to legal entities registered in Australia.</span>
 					</header>
 					<div class="row half">
 						<div class="12u" id="membershipInclude">
