wording edit - board descrition

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					<header>
 						<h2>About The Board</h2>
 						<span>
-							Our executive are entrenched in the Bitcoin community regionally, running a full gamut of expertise. 
+							Our executives are entrenched in the Bitcoin community regionally, running the full gamut of expertise.
 						</span>
 					</header>
 					<div class="container">
