Alter 'help-us' sections, remove some buttons, don't sound so begging-y

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<ul class="container">
 					<li><a href="#top">Home</a></li>
 					<li><a href="#mission">Mission</a></li>
-					<li><a href="#helpus">Help Us</a></li>
+					<!--<li><a href="#helpus">Help Us</a></li>-->
                     <li><a href="#join">Join Us</a></li>
                     <li><a href="#about">About The Board</a></li>
                     <li><a href="/wiki">Wiki</a></li>
@@ -52,7 +52,7 @@
 							</header>
 							<p>We are Australia's not-for-profit association dedicated to the standardisation, protection, and promotion of Bitcoin and cryptocurrency in the region.</p>
 							<a href="#mission" class="button button-alt button-big">Mission</a>
-							<a href="#helpus" class="button button-big">Help Us</a>
+							<!--<a href="#helpus" class="button button-big">Help Us</a>-->
 							<a href="#join" class="button button-big">Join Us</a>
 						</div>
 					</div>
@@ -109,7 +109,7 @@
 			<div class="wrapper wrapper-style3">
 				<article id="helpus">
 					<header>
-						<h1>How to help us</h1>
+						<h1>How to get involved</h1>
 						<h2>Help Australia become a global leader in Bitcoin technology.</h2>
 						<div class="row">
 							<p>The Bitcoin Association of Australia is dedicated to the promotion, 
