Add INC num to footer

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 					</div>
 					<footer>
 						<p id="copyright">
-							&copy; 2013 Bitcoin Australia <!--| Images: <a href="http://fotogrph.com">fotogrph</a> | Design: <a href="http://html5up.net/">HTML5 UP</a>-->
+							&copy; 2013 Bitcoin Australia; INC1301339 <!--| Images: <a href="http://fotogrph.com">fotogrph</a> | Design: <a href="http://html5up.net/">HTML5 UP</a>-->
 						</p>
 					</footer>
 				</article>
