Change 'join us' to link to the foundation members portal

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<span>Membership is open to individuals who are citizens or residents of Australia and to legal entities registered in Australia.</span>
 					</header>
 					<div class="row half">
-						<div class="12u" id="membershipInclude">
+						<!--<div class="12u" id="membershipInclude">
 							<h3>Loading...</h3>
 						</div>
 						<script>
@@ -171,6 +171,13 @@
 								$("#membershipInclude").load("/membership");
 							});
 						</script>
+						-->
+						<footer>
+							<a href="https://members.bitcoinfoundation.org/signup" class="button button-big">
+								<h3>Sign Up</h3>
+								Register through the Bitcoin Foundation members portal
+							</a>
+						</footer>
 					</div>
 				</article>
 			</div>
