Note: no need to sign up if you're a member of the foundation

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
 				<article id="join" class="container small">
 					<header>
 						<h2>Join Us</h2>
-						<span>Membership is open to individuals who are citizens or residents of Australia and to legal entities registered in Australia.</span>
+						<span>Membership is open to individuals who are citizens or residents of Australia and to legal entities registered in Australia.</span><br>
+						<span>There is no need to join if you are already a member of the Bitcoin Foundation</span>
 					</header>
 					<div class="row half">
 						<!--<div class="12u" id="membershipInclude">
