--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" />
 		<script src="js/jquery.min.js"></script>
 		<script src="js/config.js"></script>
 		<script src="js/skel.min.js"></script>
@@ -161,7 +161,7 @@
 					<header>
 						<h2>Join Us</h2>
 						<span>Membership is open to individuals who are citizens or residents of Australia and to legal entities registered in Australia.</span><br>
-						<span>There is no need to join if you are already a member of the Bitcoin Foundation</span>
+						<span>There is no need to join if you are already a member of the Bitcoin Foundation.</span>
 					</header>
 					<div class="row half">
 						<!--<div class="12u" id="membershipInclude">
