Modified Pantelis's Bio

--- a/index.html
+++ b/index.html
@@ -258,12 +258,28 @@
 									</div>
 									<div class="biotext">
 										<h3><a href="">Pantelis Roussakis <span class="position">| Vice President</span></a></h3>
-										<p>
+										<!--<p>
 											Digital Marketing Strategist and Consultant. Keynote speaker, Web 2.0 and Social Media test pig. I live online.
 											My aims are to introduce, train and nurture professional screen creatives and artisans in the leverage of digital currencies like Bitcoin.
 											<br>
 											From crowd-funding  projects to selling art  while bypassing the fees and penalties arbitrarily applied by the archaic financial establishment.
 											Essentially freeing the creation and sale of all art from the shackles of the cultural gatekeepers and create an untainted path from artist to consumer. In Bitcoin I trust.
+										</p>-->
+										<p>
+											Pantelis Roussakis is an Australian web and digital marketing specialist, 
+											social media speaker and corporate trainer. I have been a Bitcoin 
+											enthusiast for 3 years. 
+											<br>
+											Crypto currencies have the potential to change the way we transact. I 
+											believe that Bitcoin and crypto-currencies per say represent a practical 
+											way wealth can created and controlled by individuals. The wide
+											acceptance of Bitcoin in Australia will come about when Government and 
+											Business groups , can understand and discuss their needs within the new 
+											Bitcoin economy. Bitcoin Australia is that place.
+											<br>
+											I bring my visual communication and marketing skills to Bitcoin Australia 
+											so we can create general awareness, educate and update our members and 
+											the wider community.
 										</p>
 									</div>
 								</article>
