Update forum link to point to BF forum

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#join">Join Us</a></li>
                     <li><a href="#about">About The Board</a></li>
                     <li><a href="/wiki">Wiki</a></li>
-                    <li><a href="/forum">Forum</a></li>
+                    <li><a href="https://bitcoinfoundation.org/forum/index.php?/forum/24-australia/">Forum</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
