Add "affiliated with: bitcoin foundaiton"

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 							<a href="#join" class="button button-big">Join Us</a>
 						</div>
 					</div>
+					<div class="half-row"><p></p><hr><p></p></div>
+					<div class="row">
+						<center><h1>Affiliated with:</h1></center>
+						<img src="images/bf-logo-1024x158.jpg" alt="The Bitcoin Foundation" style="display: block; max-width: 100%;">
+					</div>
 				</article>
 			</div>
 			
