--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 					</div>
 					<footer>
 						<p id="copyright">
-							&copy; 2013 Bitcoin Australia; INC1301339 <!--| Images: <a href="http://fotogrph.com">fotogrph</a> | Design: <a href="http://html5up.net/">HTML5 UP</a>-->
+							&copy; 2013 Bitcoin Australia | INC1301339 | <a href="https://github.com/BitcoinAus/OfficialDocuments/blob/master/PrivacyPolicy.md">Privacy Policy</a>
 						</p>
 					</footer>
 				</article>
