Remind users of founding member status

--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
 						<footer>
 							<a href="https://members.bitcoinfoundation.org/signup" class="button button-big">
 								<h3>Sign Up</h3>
-								Register through the Bitcoin Foundation members portal
+								Register through the Bitcoin Foundation members portal.
 							</a>
+							<p>Members registering before the 1st of February will be known as <strong>Founding Members</strong>.</p>
 						</footer>
 					</div>
 				</article>
