--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 							</div>
 							<div class="4u">
 								<article class="box box-style2">
-									<a target="_blank" href="http://coinreaper.com/" class="image image-full"><img src="images/portfolio05.jpg" alt="" /></a>
+									<img src="images/portfolio05.jpg" alt="" />
 									<h3><a target="_blank" href="http://www.bitcoinmining.com/">Bitcoin Mining</a></h3>
 									<p>The process of compiling the ledger and verifying all transactions is called mining. The process of mining has evolved over the years. <a target="_blank" href="http://www.bitcoinmining.com/">What is Bitcoin Mining?</a></p>
 								</article>
