Remove trailing slash

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 							<div class="6u">
 								<h3>Please send donations to:</h3>
 								<p><a href="https://blockchain.info/address/1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE">1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE</a></p>
-								<a href="bitcoin:1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE"><img src="https://blockchain.info/qr?data=1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE\&size=200" alt="QR Code and Bitcoin: link"></a>
+								<a href="bitcoin:1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE"><img src="https://blockchain.info/qr?data=1BtcAus9WKuHr2C84FcRV5xJMTDqZ34dZE&size=200" alt="QR Code and Bitcoin: link"></a>
 							</div>
 						</div>
 						<div class="row ">
