--- a/index.html
+++ b/index.html
@@ -432,12 +432,12 @@
 				<article id="contact" class="container small">
 					<header>
 						<h2>Get in touch!</h2>
-						<span>If you'd like to contribute, or if you've got any queries, please post to our open mailing list:</span>
+						<span>If you'd like to contribute, or if you've got any queries, you can contact the board here:</span>
 					</header>
 					<div>
 						<div class="row">
 							<div class="12u">
-								<h1><a href="mailto:BitcoinAustralia@googlegroups.com">BitcoinAustralia@googlegroups.com</a></h1>
+								<h1><a href="mailto:board@bitcoin.asn.au">board@bitcoin.asn.au</a></h1>
 							</div>
 						</div>
 						<div class="row">
